Fixed text area width issue. Removed absolute position from comment upload notification.
Fixed profile menu issue redirecting to profile. Still breaks on dev.

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -463,7 +463,7 @@ li {
 
 .deleteButtonAlign {
     float:left;
-    margin-top:20px;
+    margin-top:15px;
     margin-left:10px;
 }
 
